# local_mart

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/local_market_backend/: Cargo.toml  local_market_backend.did
src/local_market_backend/src/: blockchain.rs  lib.rs  main.rs  product_routes.rs  shop_verification.rs
src/local_market_frontend/: package.json
src/local_market_frontend/src/: AddProductPage.jsx  AdminDashboard.jsx  App.jsx  LandingPage.jsx  main.jsx  theme.js
src/local_market_frontend/src/StateManagement/useContext/: useClient.jsx
src/local_market_frontend/src/components/: AddProductPage.css  AddProductPage.jsx  AdminDashboard.jsx  LandingPage.css  LandingPage.jsx  LoginPage.jsx  Navbar.css  Navbar.jsx  ShopDetails.css  ShopDetails.jsx  ShopOwnerDashboard.css  ShopOwnerDashboard.jsx  ShopOwnerSignUp.css  ShopOwnerSignUp.jsx  VerificationRequest.css  VerificationRequest.jsx  VerificationRequestPage.css  VerificationRequestPage.jsx  loginPage.css
src/local_market_frontend/src/pages/: AdminDashboard.jsx  Home.jsx  Login.jsx  Register.jsx  SellerDashboard.jsx  ShopDetails.jsx  ShopList.jsx
