[package]
name = "local_market_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geohash = "0.12"
geo-types = "0.7"

